# paired

./: Cargo.toml  README.md
.circleci/: config.yml
benches/: pairing_benches.rs
benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
src/: hash_to_curve.rs  hash_to_field.rs  lib.rs  signum.rs
src/bls12_381/: cofactors.rs  ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs  serde_impl.rs
src/bls12_381/ec/: g1.rs  g2.rs  mod.rs
src/bls12_381/tests/: mod.rs
