[package]
name = "paired"

# Remember to change version string in README.md.
version = "0.20.1"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <jack@z.cash>",
]
readme = "README.md"
license = "MIT/Apache-2.0"

description = "Fork of the 'paired: Pairing-friendly elliptic curve library'"
documentation = "https://docs.rs/paired/"
homepage = "https://github.com/filecoin-project/pairing"
repository = "https://github.com/filecoin-project/pairing"
edition ="2018"

[dependencies]
byteorder = "1"
blake2b_simd = "0.5"
serde = { version = "1.0", optional = true, features = ["derive"] }
fff = { version = "0.2.0", features = ["derive"] }
groupy = "0.3.0"
rand_core = "0.5"
hkdf = "0.9.0"
digest = { version = "0.9.0", features = ["std"] }

[dev-dependencies]
rand_xorshift = "0.2"
serde_json = "1.0"
sha3 = "0.9.0"
sha2 = "0.9.0"
hex = "0.4.2"

[features]
unstable-features = ["expose-arith"]
expose-arith = []
default = []

[badges]
maintenance = { status = "actively-developed" }
